<resources>
    <string name="app_name">Find your Company</string>
    <string name="version">version 1.0.0</string>
    <string name="aplicacion">FIND YOUR COMPANY</string>
    <string name="title_activity_mapas">Map</string>
    <string name="txtIdUnico">ID</string>
    <string name="txtDoc">Cédula</string>
    <string name="txtNombres">Nombres</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtClave">Password</string>
    <string name="txtLogin">Ingresar</string>
    <string name="txtRegistrar">Registrar</string>
    <string name="txtUseraName">Usuario</string>
</resources>
